Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Resume</title>
 </head>
 <body>
-    <header><a href="./Index.html">Resume</a> <a href="./Public/portfolio.html">portfolio</a> <a href="./Public/about.html">About Me</a> <a href="./Public/contact.html">Contact Me</a></header>
+    <header><a href="./index.html">Resume</a> <a href="./Public/portfolio.html">portfolio</a> <a href="./Public/about.html">About Me</a> <a href="./Public/contact.html">Contact Me</a></header>
     <h1>Omra Phantom</h1>
     <img src="./Assest/Images/omraphatom-v.2shareable.png" alt="a pink cartoon ghost with a heart on their forehead" Height="100" />
     <h2>Summary</h2>
