--- a/Public/Dndpage.html
+++ b/Public/Dndpage.html
@@ -6,7 +6,7 @@
     <title>DND invite</title>
 </head>
 <body>
-    <header><a href="../Index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
+    <header><a href="../index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
     <h1>Welcome to Etherim</h1>
     <h2>Session 0 at the end of october</h2>
     <img src="../Assest/Images/Etherim.webp" alt="A map of a fictional countient"/>
