--- a/Public/Gamesindex.html
+++ b/Public/Gamesindex.html
@@ -6,7 +6,7 @@
     <title>Games List</title>
 </head>
 <body>
-    <header><a href="../Index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
+    <header><a href="../index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
     <h1>Omra's List of games</h1>
     <h2>All the games i currently own</h2>
     <hr />
