--- a/Public/about.html
+++ b/Public/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header><a href="../Index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
+    <header><a href="../index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
     <h1>About Me</h1>
     <p>I am a web developer working on the skills to do full stack developement. I started this journey at 27 years old. I have spend years thinking this wasn't an option to me until one day a friend recommended to me a udemy course! now you can see for yourself the progressive i have made!</p>
     <footer>© Omra Phantom 2024, All Rights Reserved</footer>
