--- a/Public/contact.html
+++ b/Public/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <header><a href="../Index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
+    <header><a href="../index.html">Resume</a> <a href="./portfolio.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
     <h1>Contact Me</h1>
     <p>Email: jrc.omraphantom@gmail.com</p>
     <footer>© Omra Phantom 2024, All Rights Reserved</footer>
