--- a/Public/portfolio.html
+++ b/Public/portfolio.html
@@ -6,7 +6,7 @@
     <title>Portfoilo</title>
 </head>
 <body>
-    <header><a href="../Index.html">Resume</a> <a href="./Portfoilo.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
+    <header><a href="../index.html">Resume</a> <a href="./Portfoilo.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
     <h1>Omra Phantom's portfolio</h1>
     <h2>All of my most recent projects!</h2>    
     <ol>
