--- a/Public/portfolio.html
+++ b/Public/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfoilo</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header><a href="../index.html">Resume</a> <a href="./Portfoilo.html">portfolio</a> <a href="./about.html">About Me</a> <a href="./contact.html">Contact Me</a></header>
